package com.bank.brewdreamwelcome;

/**
 * Types of transactions that can occur on a bank account.
 */
public enum TransactionType {
    DEPOSIT,
    WITHDRAW,
    TRANSFER_IN,
    TRANSFER_OUT,
    OPEN_ACCOUNT,
    CLOSE_ACCOUNT
}


